# website_test1

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: footer.html  home.html  jobitem.html  nav.html
templetes/: home.html  joitems.html
