[tool.poetry]
name = "repl-nix-websitetest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_websitetest"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
django-text = "^1.7.6"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
